<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_linearlayout_default"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="126dp"
        android:layout_height="98dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dip"
        android:src="@drawable/ic_launcher_web" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dip"
        android:text="@string/enroll"
        android:textSize="20sp" 
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hintForUser"
            android:inputType="text"
            android:padding="5dip"
            android:textColorHint="#AAAAAA"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passWord"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hintForUser"
            android:inputType="textPassword"
            android:padding="5dip"
            android:textColorHint="#AAAAAA"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dip"
        android:text="@string/login"
        android:textSize="15sp" 
        android:background="@drawable/bg_alibuybutton"
        android:textColor="@drawable/white"/>

    <TextView
        android:id="@+id/textForText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
 />

</LinearLayout>